--- a/jobs/pacman-aqua-enricher/pom.xml
+++ b/jobs/pacman-aqua-enricher/pom.xml
@@ -45,6 +45,22 @@
 			<artifactId>jackson-dataformat-xml</artifactId>
 			<version>2.8.5</version>
 		</dependency>
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk</artifactId>
+			<version>1.12.290</version>
+		</dependency>
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk-secretsmanager</artifactId>
+			<version>1.12.413</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk-core</artifactId>
+			<version>1.12.239</version>
+		</dependency>
 
 		<dependency>
 			<groupId>com.paladincloud</groupId>
