feat: added notification details screen

--- a/webapp/tsconfig.json
+++ b/webapp/tsconfig.json
@@ -22,7 +22,8 @@
       "dom",
       "esnext.asynciterable"
     ],
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "resolveJsonModule": true
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
