--- a/webapp/package.json
+++ b/webapp/package.json
@@ -52,6 +52,7 @@
         "ngx-google-analytics": "^13.0.1",
         "ngx-highlight": "^0.0.3",
         "ngx-infinite-scroll": "^0.8.3",
+        "ngx-json-viewer": "^2.4.0",
         "ngx-select-dropdown": "^2.1.0",
         "offline-js": "^0.7.19",
         "rxjs": "~6.6.7",
