feat: add 3 lambda functions - receiveNotificationRequest, templateFormatterService, invokeNotificationsApi for notifications

--- a/lambda-functions/pom.xml
+++ b/lambda-functions/pom.xml
@@ -42,6 +42,9 @@
 
 	<modules>
 		<module>notify-event</module>
+		<module>invokeNotificationsApi</module>
+		<module>templateFormatterService</module>
+		<module>receiveNotificationRequest</module>
     </modules>
 
 </project>
