--- a/webapp/package.json
+++ b/webapp/package.json
@@ -33,8 +33,8 @@
         "@ng-select/ng-select": "^8.3.0",
         "@types/geojson": "7946.0.8",
         "@types/lodash": "4.14.112",
-        "ag-grid": "^16.0.1",
-        "ag-grid-angular": "^16.0.0",
+        "ag-grid-angular": "^29.2.0",
+        "ag-grid-community": "^29.2.0",
         "angular-in-memory-web-api": "^0.9.0",
         "apexcharts": "^3.35.4",
         "apollo-angular": "^3.0.1",
