--- a/jobs/gcp-discovery/pom.xml
+++ b/jobs/gcp-discovery/pom.xml
@@ -141,11 +141,11 @@
 
 
         <!-- https://mvnrepository.com/artifact/com.google.cloud/google-cloud-functions -->
-        <dependency>
+        <!--<dependency>
             <groupId>com.google.cloud</groupId>
             <artifactId>google-cloud-functions</artifactId>
             <version>2.9.0</version>
-        </dependency>
+        </dependency>-->
 
         <!-- https://mvnrepository.com/artifact/com.google.protobuf/protobuf-java -->
         <dependency>
