--- a/lambda-functions/pom.xml
+++ b/lambda-functions/pom.xml
@@ -10,6 +10,10 @@
 	<packaging>pom</packaging>
 
 	<name>PaladinCloud lambda functions</name>
+	<properties>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+	</properties>
 	<description>Build for paladincloud Jobs Projects</description>
 	<url>https://github.com/paladincloud/CE/jobs</url>
 
