--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,7 @@
         <module>api</module>
 		<module>jobs</module>
 		<module>webapp</module>
+        <module>lambda-functions</module>
     </modules>
     
 
