--- a/api/pacman-api-admin/src/main/resources/bootstrap.yml
+++ b/api/pacman-api-admin/src/main/resources/bootstrap.yml
@@ -2,9 +2,9 @@ security:
   oauth2:
     resource:
       jwk:
-        key-set-uri: https://cognito-idp.${AWS_USERPOOL_REGION}.amazonaws.com/${USERPOOL_ID}/.well-known/jwks.json
+        key-set-uri: https://cognito-idp.us-east-1.amazonaws.com/us-east-1_fzF7DLUkO/.well-known/jwks.json
       client:
-        clientId: ${CLIENT_ID}
+        clientId: 1tt4q1vkgf2buhq1gv614nosqs
 spring:
   application:
     name: admin-service
@@ -12,11 +12,11 @@ spring:
     description: Pacman Admin API provides admin capabilities
   cloud:
     config:
-      uri: ${CONFIG_SERVER_URL:http://localhost:8888/api/config/}
+      uri: https://dev.paladincloud.io/api/config
       enabled: true
       fail-fast: true
       name: api,admin-service,job-scheduler,batch
-      password: ${CONFIG_PASSWORD}
+      password: pacman
       username: user
       label: latest
   jpa: 
@@ -29,3 +29,5 @@ spring:
     multipart:
       max-file-size: 100MB
       max-request-size: 100MB
+tenable:
+  user-agent: Integration/1.0 (Paladin Cloud; Paladin Cloud; Build/1.0)
