--- a/api/pacman-api-admin/pom.xml
+++ b/api/pacman-api-admin/pom.xml
@@ -19,13 +19,14 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<java.version>1.8</java.version>
+		<java.version>11</java.version>
 		<powermock.version>1.6.4</powermock.version>
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<maven.compiler.target>1.8</maven.compiler.target>
+		<maven.compiler.source>11</maven.compiler.source>
+		<maven.compiler.target>11</maven.compiler.target>
 		<additionalparam>-Xdoclint:none</additionalparam>
 		<sonar.coverage.exclusions>**/*AuthConfig.java,
-			**/*CrossOriginFilter.java</sonar.coverage.exclusions>
+			**/*CrossOriginFilter.java
+		</sonar.coverage.exclusions>
 	</properties>
 
 	<dependencyManagement>
