--- a/api/pacman-api-notifications/pom.xml
+++ b/api/pacman-api-notifications/pom.xml
@@ -19,12 +19,15 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<maven.compiler.target>1.8</maven.compiler.target>
+		<maven.compiler.source>11</maven.compiler.source>
+		<maven.compiler.target>11</maven.compiler.target>
 		<additionalparam>-Xdoclint:none</additionalparam>
-		<java.version>1.8</java.version>
+		<java.version>11</java.version>
 		<powermock.version>1.6.4</powermock.version>
-		<sonar.coverage.exclusions>**/*AuthConfig.java, **/*AutowiringSpringBeanJobFactory.java, **/*RefreshScopeConfig.java, **/*CrossOriginFilter.java, **/*AuthConfig.java,**/*PacmanQuartzConfiguration.java,**/*SwaggerConfig.java</sonar.coverage.exclusions>
+		<sonar.coverage.exclusions>**/*AuthConfig.java, **/*AutowiringSpringBeanJobFactory.java,
+			**/*RefreshScopeConfig.java, **/*CrossOriginFilter.java,
+			**/*AuthConfig.java,**/*PacmanQuartzConfiguration.java,**/*SwaggerConfig.java
+		</sonar.coverage.exclusions>
 	</properties>
 
 	<dependencyManagement>
