--- a/jobs/pacman-data-shipper/pom.xml
+++ b/jobs/pacman-data-shipper/pom.xml
@@ -5,7 +5,7 @@
   <version>0.0.1-SNAPSHOT</version>
    
   <properties>
-		<java.version>1.8</java.version>
+		<java.version>11</java.version>
   </properties>
   
   <dependencies>
@@ -141,16 +141,22 @@
     	<artifactId>rest</artifactId>
     	<version>5.3.0</version>
 	</dependency>
-	<dependency>
-    	<groupId>com.fasterxml.jackson.core</groupId>
-        <artifactId>jackson-databind</artifactId>
-        <version>2.12.6.1</version>
-    </dependency>
-    <dependency>
-	   <groupId>mysql</groupId>
-	   <artifactId>mysql-connector-java</artifactId>
-	   <version>8.0.28</version>
-	</dependency>
+      <dependency>
+          <groupId>com.fasterxml.jackson.core</groupId>
+          <artifactId>jackson-databind</artifactId>
+          <version>2.12.6.1</version>
+      </dependency>
+      <dependency>
+          <groupId>mysql</groupId>
+          <artifactId>mysql-connector-java</artifactId>
+          <version>8.0.28</version>
+      </dependency>
+      <!-- https://mvnrepository.com/artifact/org.opensearch.client/opensearch-rest-high-level-client -->
+      <dependency>
+          <groupId>org.opensearch.client</groupId>
+          <artifactId>opensearch-rest-high-level-client</artifactId>
+          <version>1.3.9</version>
+      </dependency>
   </dependencies>
   <build>
   <plugins>
