--- a/api/pacman-api-compliance/pom.xml
+++ b/api/pacman-api-compliance/pom.xml
@@ -280,6 +280,11 @@
 			<groupId>software.amazon.awssdk</groupId>
 			<artifactId>dynamodb</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.20</version>
+		</dependency>
 
     </dependencies>
 
