--- a/webapp/angular.json
+++ b/webapp/angular.json
@@ -28,6 +28,7 @@
             ],
             "styles": [
               "src/styles.css",
+              "src/material-theme.scss",
               "node_modules/offline-js/themes/offline-theme-chrome.css",
               "node_modules/offline-js/themes/offline-language-english.css",
               "node_modules/ag-grid-community/styles/ag-grid.min.css",
@@ -103,6 +104,7 @@
             ],
             "styles": [
               "src/styles.css",
+              "src/material-theme.scss",
               "node_modules/offline-js/themes/offline-theme-chrome.css",
               "node_modules/offline-js/themes/offline-language-english.css",
               "node_modules/ag-grid-community/styles/ag-grid.min.css",
